// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> renders correctly if change tab 1`] = `
<Tabs
  colorScheme="dark"
  linkComponent={[Function]}
  onChange={[Function]}
  selected={0}
  tabs={
    Array [
      Object {
        "icon": Object {
          "name": "anchor",
        },
        "text": "Test 1",
      },
      Object {
        "icon": Object {
          "name": "anchor",
        },
        "text": "Test 2",
      },
    ]
  }
>
  <TabsWrapperStyled
    colorScheme="dark"
  >
    <div
      className="TabsWrapperStyled-gHoWnV dZhZpG"
    >
      <TabsContentWrapperStyled>
        <div
          className="TabsContentWrapperStyled-dkXjGq gvyVcA"
        >
          <TabsListStyled>
            <div
              className="TabsListStyled-dpAKRd fQTQyC"
            >
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  Object {
                    "name": "anchor",
                  }
                }
                index={0}
                isSelected={true}
                key="0"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 1"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={true}
                >
                  <div
                    className="TabStyled-csMJzZ gsAzPq"
                    onClick={[Function]}
                    selected={true}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-enEVMS jZgudN"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-cGqNqA khIZPl"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={true}
                            >
                              <div
                                className="TabIconStyled-bYWiJR eQkcDH"
                                selected={true}
                              >
                                <Icon
                                  color="inherit"
                                  name="anchor"
                                  size="inherit"
                                  type="font-awesome"
                                >
                                  <IconFontAwesome
                                    backgroundColor=""
                                    border={false}
                                    color="inherit"
                                    colorScheme="dark"
                                    flip="none"
                                    name="anchor"
                                    onClick={[Function]}
                                    pulse={false}
                                    rotate={0}
                                    rounded={false}
                                    size="inherit"
                                    sizeMultiplier={1}
                                    spin={false}
                                    tabIndex={-1}
                                    type="font-awesome"
                                  >
                                    <IconFontAwesomeStyled
                                      backgroundColor=""
                                      bgColor=""
                                      border={false}
                                      className="fa fa-anchor"
                                      color=""
                                      colorScheme="dark"
                                      flip="none"
                                      onClick={[Function]}
                                      pulse={false}
                                      rotate={0}
                                      rounded={false}
                                      size="normal"
                                      sizeKey="inherit"
                                      sizeMultiplier={1}
                                      spin={false}
                                      userColor="inherit"
                                    >
                                      <span
                                        className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                                        color=""
                                        onClick={[Function]}
                                        rotate={0}
                                        size="normal"
                                      />
                                    </IconFontAwesomeStyled>
                                  </IconFontAwesome>
                                </Icon>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon="anchor"
                            >
                              <div
                                className="TabTextStyled-kyChmy HdHAs"
                              >
                                Test 1
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  Object {
                    "name": "anchor",
                  }
                }
                index={1}
                isSelected={false}
                key="1"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 2"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={false}
                >
                  <div
                    className="TabStyled-csMJzZ fFefNP"
                    onClick={[Function]}
                    selected={false}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-enEVMS jZgudN"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-cGqNqA khIZPl"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={false}
                            >
                              <div
                                className="TabIconStyled-bYWiJR eMTSwD"
                                selected={false}
                              >
                                <Icon
                                  color="inherit"
                                  name="anchor"
                                  size="inherit"
                                  type="font-awesome"
                                >
                                  <IconFontAwesome
                                    backgroundColor=""
                                    border={false}
                                    color="inherit"
                                    colorScheme="dark"
                                    flip="none"
                                    name="anchor"
                                    onClick={[Function]}
                                    pulse={false}
                                    rotate={0}
                                    rounded={false}
                                    size="inherit"
                                    sizeMultiplier={1}
                                    spin={false}
                                    tabIndex={-1}
                                    type="font-awesome"
                                  >
                                    <IconFontAwesomeStyled
                                      backgroundColor=""
                                      bgColor=""
                                      border={false}
                                      className="fa fa-anchor"
                                      color=""
                                      colorScheme="dark"
                                      flip="none"
                                      onClick={[Function]}
                                      pulse={false}
                                      rotate={0}
                                      rounded={false}
                                      size="normal"
                                      sizeKey="inherit"
                                      sizeMultiplier={1}
                                      spin={false}
                                      userColor="inherit"
                                    >
                                      <span
                                        className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                                        color=""
                                        onClick={[Function]}
                                        rotate={0}
                                        size="normal"
                                      />
                                    </IconFontAwesomeStyled>
                                  </IconFontAwesome>
                                </Icon>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon="anchor"
                            >
                              <div
                                className="TabTextStyled-kyChmy HdHAs"
                              >
                                Test 2
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
            </div>
          </TabsListStyled>
        </div>
      </TabsContentWrapperStyled>
    </div>
  </TabsWrapperStyled>
</Tabs>
`;

exports[`<Tabs/> renders correctly if change tab 2`] = `
<Tabs
  colorScheme="dark"
  linkComponent={[Function]}
  onChange={[Function]}
  selected={0}
  tabs={
    Array [
      Object {
        "icon": Object {
          "name": "anchor",
        },
        "text": "Test 1",
      },
      Object {
        "icon": Object {
          "name": "anchor",
        },
        "text": "Test 2",
      },
    ]
  }
>
  <TabsWrapperStyled
    colorScheme="dark"
  >
    <div
      className="TabsWrapperStyled-gHoWnV dZhZpG"
    >
      <TabsContentWrapperStyled>
        <div
          className="TabsContentWrapperStyled-dkXjGq gvyVcA"
        >
          <TabsListStyled>
            <div
              className="TabsListStyled-dpAKRd fQTQyC"
            >
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  Object {
                    "name": "anchor",
                  }
                }
                index={0}
                isSelected={false}
                key="0"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 1"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={false}
                >
                  <div
                    className="TabStyled-csMJzZ fFefNP"
                    onClick={[Function]}
                    selected={false}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-enEVMS jZgudN"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-cGqNqA khIZPl"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={false}
                            >
                              <div
                                className="TabIconStyled-bYWiJR eMTSwD"
                                selected={false}
                              >
                                <Icon
                                  color="inherit"
                                  name="anchor"
                                  size="inherit"
                                  type="font-awesome"
                                >
                                  <IconFontAwesome
                                    backgroundColor=""
                                    border={false}
                                    color="inherit"
                                    colorScheme="dark"
                                    flip="none"
                                    name="anchor"
                                    onClick={[Function]}
                                    pulse={false}
                                    rotate={0}
                                    rounded={false}
                                    size="inherit"
                                    sizeMultiplier={1}
                                    spin={false}
                                    tabIndex={-1}
                                    type="font-awesome"
                                  >
                                    <IconFontAwesomeStyled
                                      backgroundColor=""
                                      bgColor=""
                                      border={false}
                                      className="fa fa-anchor"
                                      color=""
                                      colorScheme="dark"
                                      flip="none"
                                      onClick={[Function]}
                                      pulse={false}
                                      rotate={0}
                                      rounded={false}
                                      size="normal"
                                      sizeKey="inherit"
                                      sizeMultiplier={1}
                                      spin={false}
                                      userColor="inherit"
                                    >
                                      <span
                                        className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                                        color=""
                                        onClick={[Function]}
                                        rotate={0}
                                        size="normal"
                                      />
                                    </IconFontAwesomeStyled>
                                  </IconFontAwesome>
                                </Icon>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon="anchor"
                            >
                              <div
                                className="TabTextStyled-kyChmy HdHAs"
                              >
                                Test 1
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  Object {
                    "name": "anchor",
                  }
                }
                index={1}
                isSelected={true}
                key="1"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 2"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={true}
                >
                  <div
                    className="TabStyled-csMJzZ gsAzPq"
                    onClick={[Function]}
                    selected={true}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-enEVMS jZgudN"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-cGqNqA khIZPl"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={true}
                            >
                              <div
                                className="TabIconStyled-bYWiJR eQkcDH"
                                selected={true}
                              >
                                <Icon
                                  color="inherit"
                                  name="anchor"
                                  size="inherit"
                                  type="font-awesome"
                                >
                                  <IconFontAwesome
                                    backgroundColor=""
                                    border={false}
                                    color="inherit"
                                    colorScheme="dark"
                                    flip="none"
                                    name="anchor"
                                    onClick={[Function]}
                                    pulse={false}
                                    rotate={0}
                                    rounded={false}
                                    size="inherit"
                                    sizeMultiplier={1}
                                    spin={false}
                                    tabIndex={-1}
                                    type="font-awesome"
                                  >
                                    <IconFontAwesomeStyled
                                      backgroundColor=""
                                      bgColor=""
                                      border={false}
                                      className="fa fa-anchor"
                                      color=""
                                      colorScheme="dark"
                                      flip="none"
                                      onClick={[Function]}
                                      pulse={false}
                                      rotate={0}
                                      rounded={false}
                                      size="normal"
                                      sizeKey="inherit"
                                      sizeMultiplier={1}
                                      spin={false}
                                      userColor="inherit"
                                    >
                                      <span
                                        className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                                        color=""
                                        onClick={[Function]}
                                        rotate={0}
                                        size="normal"
                                      />
                                    </IconFontAwesomeStyled>
                                  </IconFontAwesome>
                                </Icon>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon="anchor"
                            >
                              <div
                                className="TabTextStyled-kyChmy HdHAs"
                              >
                                Test 2
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
            </div>
          </TabsListStyled>
        </div>
      </TabsContentWrapperStyled>
    </div>
  </TabsWrapperStyled>
</Tabs>
`;

exports[`<Tabs/> renders correctly if prop  1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <a
        href="test1"
        onClick={[Function]}
      >
        <div
          className="TabStyled-csMJzZ gsAzPq"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled-enEVMS jZgudN"
          >
            <div
              className="TabContentStyled-cGqNqA khIZPl"
            >
              <div
                className="TabTextStyled-kyChmy jvIQbK"
              >
                Test1
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="test2"
        onClick={[Function]}
      >
        <div
          className="TabStyled-csMJzZ fFefNP"
          onClick={[Function]}
          selected={false}
        >
          <div
            className="TabContentWrapperStyled-enEVMS jZgudN"
          >
            <div
              className="TabContentStyled-cGqNqA khIZPl"
            >
              <div
                className="TabTextStyled-kyChmy jvIQbK"
              >
                Test2
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop icon 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabIconStyled-bYWiJR eQkcDH"
              selected={true}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled-kyChmy HdHAs"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop linkComponent passed 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div
          className="TabStyled-csMJzZ gsAzPq"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled-enEVMS jZgudN"
          >
            <div
              className="TabContentStyled-cGqNqA khIZPl"
            >
              <div
                className="TabTextStyled-kyChmy jvIQbK"
              >
                Test
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set 1 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 2`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop text is empty 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly with default props 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    />
  </div>
</div>
`;
